@@ -31,6 +31,8 @@ Post-v2.9.0
      * Commands ovs-appctl dpif-netdev/pmd-*-show can now work on a single PMD
      * Detailed PMD performance metrics available with new command
          ovs-appctl dpif-netdev/pmd-perf-show
+     * Supervision of PMD performance metrics and logging of suspicious
+       iterations
 
 v2.9.0 - 19 Feb 2018
 --------------------
